k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: taskflow-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: taskflow-backend

  template:
    metadata:
      labels:
        app: taskflow-backend

    spec:
      containers:
        - name: backend
          image: bharathp8055/taskflow-backend:v2

          ports:
            - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
