k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskflow-backend
spec:
 selector:
   app: taskflow-backend
 ports:
   - port: 3000
     targetPort: 3000
 type: ClusterIP
