k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: taskflow-frontend

spec:
  type: NodePort

  selector:
    app: taskflow-frontend

  ports:
    - port: 80
      targetPort: 80
