k8s/taskflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskflow-ingress

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taskflow-frontend
                port:
                  number: 80
